--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/app_payment?allowPublicKeyRetrieval=true&useSSL=false
+    url: jdbc:mysql://localhost:3306/microservice?allowPublicKeyRetrieval=true&useSSL=false
     username: root
     password: password
   jpa:
@@ -14,9 +14,40 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-  application:
-      name: payment-service
 
+
+#  zipkin:
+#    base-url: http://localhost:9411/
+
+#actuator settings
+management:
+  health.circuitbreakers.enabled: true
+  endpoints.web.exposure.include:
+    - '*'
+  endpoint.health.show-details: always
+  tracing:
+    sampling:
+      probability: 1.0
+
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      payment-service:
+        registerHealthIndicator: true
+        slidingWindowSize: 5
+        slidingWindowType: COUNT_BASED
+        minimumNumberOfCalls: 5
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        waitDurationInOpenState: 5s
+        failureRateThreshold: 25
+        eventConsumerBufferSize: 10
+  timelimiter:
+    instances:
+      payment-service:
+        timeoutDuration: 2000ms  # Maximum duration for method execution
+        cancelRunningFuture: true  # Cancel the running task if timeout occurs
 
 
 
@@ -24,15 +55,5 @@ logging:
   level:
     root: INFO
 
-eureka:
-  client:
-    register-with-eureka : true
-    fetch-registry : true
-    service-url:
-      defaultZone : http://localhost:8761/eureka/
-      instance:
-        hostname : localhost
-  instance:
-    prefer-ip-address: true
 
-#change
+
